# gemini-scaffolder

./: .env.example  .gitignore  CLAUDE.md  README.md  SKILLS.md  docker-compose.yml  generate_workspace.py  main.py  pyproject.toml
gemini_adk_wrapper/: Dockerfile  requirements.txt
gemini_adk_wrapper/src/: config.py  evaluation_loop.py  litellm_proxy.py  main.py  mcp_client.py
gemini_adk_wrapper/src/api/: chat.py
gemini_adk_wrapper/src/middleware/: logging.py
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  gemini-adk-wrapper-deployment.yaml  gemini-adk-wrapper-service.yaml  payment-service-deployment.yaml  payment-service-service.yaml  user-service-deployment.yaml  user-service-service.yaml
payment-service/: Dockerfile  pyproject.toml  requirements.txt
payment-service/src/: __init__.py  config.py  crud.py  database.py  fastmcp_tool.py  main.py  mcp_server.py  models.py  schemas.py
payment-service/src/api/: transactions.py
payment-service/src/middleware/: logging.py  tenant.py
shared/: logging_config.py
tests/: test_services.py
user-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
user-service/src/: __init__.py  config.py  crud.py  database.py  fastmcp_tool.py  main.py  mcp_server.py  models.py  schemas.py
user-service/src/api/: users.py
user-service/src/middleware/: logging.py  tenant.py
