[project]
name = "payment-service"
version = "0.1.0"
description = "Multi-tenant Payment Service with FastMCP support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlalchemy>=2.0.28",
    "aiosqlite>=0.20.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "fastmcp>=0.4.1",
    "mcp>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
    "black>=24.2.0",
    "isort>=5.13.2",
    "mypy>=1.9.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88