[project]
name = "user-service"
version = "0.1.0"
description = "Multi-tenant User Service with SQLite (WAL), SQLAlchemy, and FastMCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.28",
    "aiosqlite>=0.20.0",
    "fastmcp>=0.4.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0"
]

[tool.hatch.build.targets.wheel]
# Include the src/ tree and README so hatchling knows what to ship in the wheel
include = ["src/**", "README.md"]